// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TitleElements FourthLevelTitleStyle snapshot by default 1`] = `
.c0 {
  font-size: 12px;
  line-height: 15px;
}

.c0.not-great-cause-proposal {
  margin: 0 0 15px;
}

@media (min-width:360px) {
  .c0 {
    font-size: 14px;
    line-height: 19px;
  }
}

@media (min-width:969px) {
  .c0 {
    font-size: 16px;
    line-height: 32px;
  }
}

@media (min-width:1140px) {
  .c0 {
    font-size: 18px;
    line-height: 25px;
  }
}

<h4
  className="c0"
>
  H4
</h4>
`;

exports[`TitleElements SecondLevelTitleStyle snapshot by default 1`] = `
.c0 {
  font-size: 20px;
  line-height: 24px;
}

@media (min-width:360px) {
  .c0 {
    font-size: 24px;
    line-height: 32px;
  }
}

@media (min-width:767px) {
  .c0 {
    font-size: 26px;
  }
}

@media (min-width:969px) {
  .c0 {
    font-size: 28px;
  }
}

@media (min-width:1140px) {
  .c0 {
    font-size: 30px;
  }
}

<h2
  className="c0"
>
  H2
</h2>
`;

exports[`TitleElements ThirdLevelTitleStyle snapshot by default 1`] = `
.c0 {
  font-size: 14px;
  line-height: 19px;
}

@media (min-width:767px) {
  .c0 {
    font-size: 16px;
    line-height: 22px;
  }
}

@media (min-width:767px) {
  .c0 {
    font-size: 18px;
    line-height: 25px;
  }
}

@media (min-width:969px) {
  .c0 {
    font-size: 20px;
    line-height: 30px;
  }
}

@media (min-width:1140px) {
  .c0 {
    font-size: 22px;
  }
}

<h3
  className="c0"
>
  H3
</h3>
`;
